@@ -17,12 +17,12 @@
 package com.jayway.restassured.internal.assertion
 
 /**
- * A {@link PathFragmentEscaper} that escapes the path fragment with quotes
+ * A {@link PathFragmentEscaper} that escapes the path fragment with <code>getAt('<fragment>')</code>
  */
-abstract class QuoteFragmentEscaper implements PathFragmentEscaper {
+abstract class GetAtPathFragmentEscaper implements PathFragmentEscaper {
 
   @Override
   String escape(String pathFragment) {
-    return "'" + pathFragment + "'"
+    return "getAt('" + pathFragment + "')"
   }
 }
